almoste done, media queries and last section to do

--- a/why_you_read.html
+++ b/why_you_read.html
@@ -34,7 +34,7 @@
 
     <main class="why-read-main">
         <section class="why-read-main__benefits">
-            <h2 class="why-read-main__benefits--heading m">Jakie korzyści czepiesz z czytania książek?</h2>
+            <h2 class="why-read-main__benefits--heading m">Jakie korzyści czerpiesz z czytania książek?</h2>
             <div class="why-read-main__benefits--box">
                 <div class="why-read-main__benefits--line"></div>
                 <ul class="why-read-main__benefits--list">
