--- a/index.html
+++ b/index.html
@@ -45,18 +45,16 @@
             </div>
             <div class="homepage__about-project">
                 <h2>O projekcie</h2>
-                <p>Wybraliśmy ten temat, ponieważ uważamy, że rozgłos czytelnictwa mógłby doprowadzić do większego
+                <p>Wybraliśmy ten temat, ponieważ uważamy, że rozpowszechnienie czytelnictwa mogłoby doprowadzić do większego
                     zainteresowania książkami wśród młodych ludzi (i nie tylko), a co za tym idzie, czerpanie wielu
                     korzyści z czytania.
                 </p>
             </div>
             <div class="homepage__about-form">
                 <h2>O ankiecie</h2>
-                <p>Ankietę stworzyliśmy w formie elektronicznej, za pomocą formularza Google. Wzięło w niej udział 112
-                    uczniów.
-                </p>
+                <p>Ankietę stworzyliśmy za pomocą metody CAWI jest to metoda  zbierania informacji od respondentów poprzez samodzielne wypełnienie formularzy elektronicznych za pośrednictwem Internetu. Wykorzystaliśmy do tego celu platformę Google Forms.
                 
-                <p>Pierwsze pytanie - najbardziej podstawowe, jakie zadaliśmy, to:</p>
+                <p>Pierwsze najbardziej podstawowe pytanie jakie zadaliśmy, to:</p>
                 <h3>,,Czy lubisz czytać książki?''</h3>
                 
 
