--- a/favourites.html
+++ b/favourites.html
@@ -32,13 +32,19 @@
         <h1 class="small-header__heading"> Ulubieńcy ZST</h1>
     </header>
 
-    <main class="fav-main">
 
-        <section class="fav-main__question">
+
+
+    <main class="fav-main ">
+
+
+
+
+        <section class="fav-main__question wrapper">
 
             <div class="fav-main__question--circle-box">
                 <h2 class="fav-main__question--heading">Czy masz ulubioną książkę?</h2>
-                
+
                 <div class="fav-main__question--circle">
                     <div class="fav-main__question--yes">
                         <p>TAK <br> 34,8%</p>
@@ -50,35 +56,87 @@
                 </div>
             </div>
 
+
+
+
             <div class="fav-main__question--podium-box">
+
                 <h2 class="fav-main__question--heading">Ulubione książki ZST</h2>
+
+
                 <div class="fav-main__question--podium">
+
+
                     <div class="fav-main__question--podium--item2 fav-main__question--podium--item">
                         <div class="fav-main__question--podium--item2-book fav-main__question--podium--item--book">
+
+                            <div
+                                class="fav-main__question--podium--item2-book-text fav-main__question--podium--item--book--text">
+                                <p>"Can't hurt me" <br>
+                                    Goggins David</p>
+                            </div>
+
                         </div>
                         <p>2</p>
                     </div>
+
                     <div class="fav-main__question--podium--item1 fav-main__question--podium--item">
                         <div class="fav-main__question--podium--item1-book fav-main__question--podium--item--book">
+
+                            <div
+                                class="fav-main__question--podium--item2-book-text fav-main__question--podium--item--book--text">
+                                <p>"Wiedźmin. Chrzest ognia" <br> Sapkowski Andrzej</p>
+                            </div>
+
                         </div>
                         <p>1</p>
                     </div>
+
                     <div class="fav-main__question--podium--item3 fav-main__question--podium--item">
                         <div class="fav-main__question--podium--item3-book fav-main__question--podium--item--book">
+
+                            <div
+                                class="fav-main__question--podium--item2-book-text fav-main__question--podium--item--book--text">
+                                <p>"1984" <br> George Orwell</p>
+                            </div>
+
                         </div>
                         <p>3</p>
                     </div>
                 </div>
+
+
                 <button class="fav-main__question--podium-btn fav-main__question--podium-btn1">Poznaj wyniki</button>
+            </div>
+
+
+            <div class="conclusions">
+                <h2 class="conclusions--heading">Wnioski:</h2>
+                <div class="conclusions--text">
+
+                    <p>
+                        Na pytanie „Czy masz ulubioną książke?” 34,8% ankietowanych odpowiedziało twierdząco.
+                    </p>
+                    <p>
+                        Najczęściej wybieraną książką przez uczniów ZST nr4 jest „Wiedźmin. Chrzest Ognia” Andrzeja
+                        Sapkowskiego.
+                    </p>
+                    <p>
+                        „Can’t hurt me” Davida Gogginsa jest drugą najczęściej wybieraną wśród ankietowanych pozycją.
+                    </p>
+                    <p>
+                        Na trzecim miejscu znajduje się utwór „1984” George’a Orwella.
+                    </p>
+                </div>
             </div>
 
         </section>
 
-        
-<div class="fav-main__line"></div>
+
+        <div class="fav-main__line"></div>
 
 
-        <section class="fav-main__question">
+        <section class="fav-main__question wrapper">
 
             <div class="fav-main__question--circle-box">
                 <h2 class="fav-main__question--heading">Czy masz ulubionego autora?</h2>
@@ -95,19 +153,44 @@
 
             <div class="fav-main__question--podium-box">
                 <h2 class="fav-main__question--heading">Ulubieni autorzy ZST:</h2>
+
+
                 <div class="fav-main__question--podium">
+
+
                     <div class="fav-main__question--podium--item2 fav-main__question--podium--item">
-                        <div class="fav-main__question--podium--item2-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        <div
+                            class="fav-main__question--podium--item2-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+
+                            <div
+                                class="fav-main__question--podium--item2-book-text fav-main__question--podium--item--book--text">
+                                <p> J.R.R. Tolkien <br> (1892-1973r.)</p>
+                            </div>
+
                         </div>
                         <p>2</p>
                     </div>
                     <div class="fav-main__question--podium--item1 fav-main__question--podium--item">
-                        <div class="fav-main__question--podium--item1-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        <div
+                            class="fav-main__question--podium--item1-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+
+                            <div
+                                class="fav-main__question--podium--item1-book-text fav-main__question--podium--item--book--text">
+                                <p>Andrzej Sapkowski <br> (1948r.-dziś)</p>
+                            </div>
+
                         </div>
                         <p>1</p>
                     </div>
                     <div class="fav-main__question--podium--item3 fav-main__question--podium--item">
-                        <div class="fav-main__question--podium--item3-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+                        <div
+                            class="fav-main__question--podium--item3-author fav-main__question--podium--item--book fav-main__question--podium--item--book2">
+
+                            <div
+                                class="fav-main__question--podium--item3-book-text fav-main__question--podium--item--book--text">
+                                <p>Nikołaj Gogol<br>(1809-1852r.)</p>
+                            </div>
+
                         </div>
                         <p>3</p>
                     </div>
@@ -115,8 +198,27 @@
                 <button class="fav-main__question--podium-btn fav-main__question--podium-btn2">Poznaj wyniki</button>
             </div>
 
-        </section>
 
+            <div class="conclusions">
+                <h2 class="conclusions--heading">Wnioski:</h2>
+                <div class="conclusions--text">
+                    <p>
+                        Na pytanie „Czy masz ulubionego autora?” 18,8% ankietowanych odpowiedziało twierdząco.
+                    </p>
+                    <p>
+                        Najczęściej wybieranym autorem w ZST nr4 jest Andrzej Sapkowski.
+                    </p>
+                    <p>
+                        Natomiast J.R.R Tolkien jest drugim najczęściej wspominanym w odpowiedziach autorem wśród
+                        ankietowanych.
+                    </p>
+                    <p>
+                        Na 3 miejscu znajduje się Nikołaj Gogol.
+                    </p>
+                </div>
+            </div>
+
+        </section>
 
 
 
@@ -125,7 +227,9 @@
 
 
 
-    <footer>Aniela Kapłon, Sebastian Koniarz, Kacper Olszak</footer>
+    <footer>
+        <p>Aniela Kapłon, Sebastian Koniarz, Kacper Olszak</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
