--- a/frequency.html
+++ b/frequency.html
@@ -103,7 +103,7 @@
     </main>
 
 
-    <footer>Aniela Kapłon, Sebastian Koniarz, Kacper Olszak</footer>
+    <footer><p>Aniela Kapłon, Sebastian Koniarz, Kacper Olszak</p></footer>
 
     <script src="script.js"></script>
 </body>
