--- a/frequency.html
+++ b/frequency.html
@@ -19,11 +19,11 @@
         <button class="nav__burger-icon"><i class="fa-solid fa-bars"></i></button>
         <div class="nav__items">
             <button class="nav__close-icon"><i class="fa-solid fa-x"></i></button>
-            <a href="index.html">Główna</a>
-            <a href="frequency.html">Częstotliwość czytania</a>
-            <a href="favourites.html">Ulubieńcy ZST</a>
-            <a href="why_you_read.html">Powody czytania</a>
-            <a href="specific_info.html">Specyficzne informacje</a>
+            <a class="link three" href="index.html">Główna</a>
+            <a class="link three" href="frequency.html">Częstotliwość czytania</a>
+            <a class="link three" href="favourites.html">Ulubieńcy ZST</a>
+            <a class="link three" href="why_you_read.html">Powody czytania</a>
+            <a class="link three" href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
