--- a/specific_info.html
+++ b/specific_info.html
@@ -19,11 +19,11 @@
         <button class="nav__burger-icon"><i class="fa-solid fa-bars"></i></button>
         <div class="nav__items">
             <button class="nav__close-icon"><i class="fa-solid fa-x"></i></button>
-            <a href="index.html">Główna</a>
-            <a href="frequency.html">Częstotliwość czytania</a>
-            <a href="favourites.html">Ulubieńcy ZST</a>
-            <a href="why_you_read.html">Powody czytania</a>
-            <a href="specific_info.html">Specyficzne informacje</a>
+            <a class="link three" href="index.html">Główna</a>
+            <a class="link three" href="frequency.html">Częstotliwość czytania</a>
+            <a class="link three" href="favourites.html">Ulubieńcy ZST</a>
+            <a class="link three" href="why_you_read.html">Powody czytania</a>
+            <a class="link three" href="specific_info.html">Specyficzne informacje</a>
         </div>
     </nav>
 
@@ -284,7 +284,7 @@
                     </p>
                     <p class="spec-info-main__message-box--text--message">Najbliższą formą książki dla ankietowanych
                         jest forma papierowa. <br> <br>
-                        Drugą najczęściej wybieraną opcją jest ebook. <br> <br>
+                        Drugą najczęściej wybieraną opcją jest audiobook. <br> <br>
                         Najrzadziej ankietowani sięgają po książki w witrynie Wattpad.
                     </p>
                 </div>
@@ -697,7 +697,7 @@
                 <div class="spec-info-main__message-box--text">
                     <p class="spec-info-main__message-box--text--name spec-info-main__message-box--text--alt">Wnioski:
                     </p>
-                    <p class="spec-info-main__message-box--text--message">Rodzaj książek, który zyskał największą ilość głosów jest fantasy.<br> <br>
+                    <p class="spec-info-main__message-box--text--message">Rodzajem książek, który zyskał największą ilość głosów jest fantasy.<br> <br>
                         Drugim najczęściej czytanym rodzajem książek jest Science Fiction.  <br> <br>
                         Najrzadziej czytanymi wśród uczniów ZST nr.4 rodzajami książek są: thriller, o tematyce politycznej, literatura piękna, programistyczne i poradnikowe. 
                     </p>
