--- a/specific_info.html
+++ b/specific_info.html
@@ -507,7 +507,7 @@
 
             <div class="spec-info-main__message-box--bubble">
                 <div class="spec-info-main__message-box--text">
-                    <p class="spec-info-main__message-box--text--name">18,3%%
+                    <p class="spec-info-main__message-box--text--name">18,3%
                     </p>
                     <p class="spec-info-main__message-box--text--message">Fantasy.</p>
                 </div>
@@ -516,7 +516,7 @@
 
             <div class="spec-info-main__message-box--bubble">
                 <div class="spec-info-main__message-box--text">
-                    <p class="spec-info-main__message-box--text--name">17,9%%
+                    <p class="spec-info-main__message-box--text--name">17,9%
                     </p>
                     <p class="spec-info-main__message-box--text--message">Science fiction.</p>
                 </div>
